add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -45,41 +45,43 @@
 
       <section id="backdrop" class="page__backdrop">
         <section class="page__menu">
-          <a class="page__close" href="#"></a>
-          <div class="page_menu-puncts">
-            <div class="page__items">
-              <a class="page__link" href="#gallery">Галерея</a>
+          <section class="page__menu-content">
+            <a class="page__close" href="#"></a>
+            <div class="page_menu-puncts">
+              <div class="page__items">
+                <a class="page__link" href="#gallery">Галерея</a>
 
-              <a class="page__link" href="#actual">Виставки та події</a>
+                <a class="page__link" href="#actual">Виставки та події</a>
+              </div>
+
+              <div class="page__items ">
+                <a class="page__link" href="#subscription">Про Нас</a>
+
+                <a class="page__link" href="#footer">Контакти</a>
+              </div>
             </div>
 
-            <div class="page__items ">
-              <a class="page__link" href="#footer">Про Нас</a>
+            <hr class="page__line">
 
-              <a class="page__link" href="#footer">Контакти</a>
+            <div class="page__right">
+              <p class="page__graph">Графік роботи</p>
+              <div class="page__paragraphs">
+                <p class="page__time-work">
+                  <strong>12:00— 20:00</strong> середа <br>
+                  <strong>12:00 — 20:00</strong> четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя
+                </p>
+
+                <p class="page__holiday">
+                  <strong>Вихідні:</strong> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
             </div>
-          </div>
-
-          <hr class="page__line">
-
-          <div class="page__right">
-            <p class="page__graph">Графік роботи</p>
-            <div class="page__paragraphs">
-              <p class="page__time-work">
-                <strong>12:00— 20:00</strong> середа <br>
-                <strong>12:00 — 20:00</strong> четвер <br>
-                <strong>12:00 — 20:00</strong> п’ятниця <br>
-                <strong>11:00 — 19:00</strong> субота <br>
-                <strong>11:00 — 19:00</strong> неділя
-              </p>
-
-              <p class="page__holiday">
-                <strong>Вихідні:</strong> понеділок, вівторок
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
-            </div>
-          </div>
+          </section>
         </section>
       </section>
     </header>
@@ -190,7 +192,7 @@
 
       </div>
 
-      <section class="subscription">
+      <section id="subscription" class="subscription">
         <h2 class="subscription__title title">Підписка</h2>
         <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
         <form
@@ -283,7 +285,7 @@
             </div>
 
             <div class="footer__items">
-              <a class="footer__link" href="#footer">Про Нас</a>
+              <a class="footer__link" href="#subscription">Про Нас</a>
 
               <a class="footer__link" href="#footer">Контакти</a>
             </div>
