finised header and 70% of menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__icon">
+        <a href="#menu" class="icon icon--menu"></a>
+      </div>
+
+      <div class="header__top">
+        <a class="header__top-logo">
+          NA
+          <br>
+          MU
+        </a>
+      </div>
+
+      <aside class="header__aside aside">
+        <h1 class="aside__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="aside__buy-tickets">
+          <a href="#" class="aside__buy-tickets--button">КВИТКИ</a>
+        </div>
+
+        <span class="aside__events--rotated">Події</span>
+      </aside>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__icon">
+        <a href="#" class="icon icon--close"></a>
+      </div>
+
+      <div class="menu__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#gallery" class="nav__link">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a href="#events" class="nav__link">
+              Виставки та
+              <br>
+              події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#about-us" class="nav__link">Про нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="contacts" class="nav__link">Контакти</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="menu__schedule schedule">
+        <h2 class="schedule__title">Графік роботи</h2>
+
+        <div class="schedule__wrapper">
+          <ul class="schedule__work-days">
+            <li class="schedule__day">
+              <span class="bold">12:00 - 20:00</span>
+              <span class="schedule__day--day-of-week">Середа</span>
+            </li>
+            <li class="schedule__day">
+              <span class="bold">12:00 - 20:00</span>
+              <span class="schedule__day--day-of-week">Четвер</span>
+            </li>
+            <li class="schedule__day">
+              <span class="bold">12:00 - 20:00</span>
+              <span class="schedule__day--day-of-week">П'ятниця</span>
+            </li>
+            <li class="schedule__day">
+              <span class="bold">11:00 - 19:00</span>
+              <span class="schedule__day--day-of-week">Субота</span>
+            </li>
+            <li class="schedule__day">
+              <span class="bold">11:00 - 19:00</span>
+              <span class="schedule__day--day-of-week">Неділя</span>
+            </li>
+          </ul>
+
+          <p class="schedule__weekends">
+            <span class="blod">Вихідні:</span> понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
