without menu and slider

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>namu</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="shortcut icon"
       type="image/png"
@@ -99,10 +99,8 @@
         </h3>
 
         <div class="gallery__slider slider__container">
-          <img src="./images/320/05.png"
-          alt="picture" class="gallery__p">
         </div>
-        
+
         <div class="gallery__box gallery__container">
           <img src="./images/1280/05.png"
           alt="picture" class="gallery__p1">
@@ -134,7 +132,98 @@
         </button>
       </div>
     </section>
+    <!-- footer -->
+    <footer class="footer" id="contacts">
+      <div class="footer__container">
+        <a href="#main" class="footer__logo title">
+          NA<br>MU
+        </a>
+        <div class="footer__icons">
+          <a href="#facebook.com"
+            class="footer__fb"
+            target="_blank">
+            <img src="./images/320/Facebook.svg" alt="F">
+          </a>
+          <a href="#facebook.com"
+            class="footer__fb"
+            target="_blank">
+            <img src="./images/320/instagram.svg" alt="In">
+          </a>
+        </div>
+        <div class="footer__work-schedule">
+          <p class="footer__text footer__text--title">Графік роботи</p>
+          <div class="footer__block">
+            <p class="footer__time">
+              12:00 — 20:00
+            </p>
+            <p class="footer__text">
+              середа
+            </p>
+          </div>
+          <div class="footer__block">
+            <p class="footer__time">
+              12:00 — 20:00
+            </p>
+            <p class="footer__text">
+              четвер
+            </p>
+          </div>
+          <div class="footer__block">
+            <p class="footer__time">
+              12:00 — 20:00
+            </p>
+            <p class="footer__text">
+              п’ятниця
+            </p>
+          </div>
+          <div class="footer__block">
+            <p class="footer__time">
+              11:00 — 19:00
+            </p>
+            <p class="footer__text">
+              субота
+            </p>
+          </div>
+          <div class="footer__block">
+            <p class="footer__time">
+              11:00 — 19:00
+            </p>
+            <p class="footer__text">
+              неділя
+            </p>
+          </div>
+          <p class="footer__text footer__text--info">
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p class="footer__text footer__text--title">
+            Контакти:
+          </p>
+          <p class="footer__text">
+            вул. М. Грушевського, 6; Київ, 01001 <br>
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+        <a href="#main" class="footer__arrow"></a>
+        <div class="footer__line"></div>
+        <div class="footer__menu">
+          <a href="#gallery" class="footer__menu-item">Галерея</a>
+          <a href="#main" class="footer__menu-item">Про Нас</a>
+          <a href="#events" class="footer__menu-item">Виставки та події</a>
+          <a href="#contacts" class="footer__menu-item">Контакти</a>
+        </div>
 
+        <div class="footer__copyright">
+          <p class="footer__copyright-element">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright-element">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
