--- a/src/index.html
+++ b/src/index.html
@@ -262,12 +262,20 @@
               <section class="footer__contacts">
                 <h4 class="footer__title title4">Контакти:</h4>
 
-                <p class="footer__address">
-                  вул. М. Грушевського, 6; Київ, 01001
-                  тел. +38 (044) 278-13-57
-                  факс +38 (044) 278-74-54 <br>
-                  e-mail: info@namu.kiev.ua
-                </p>
+                <ul class="footer__address">
+                  <li class="footer__item">
+                    <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494431,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?authuser=0&entry=ttu" class="footer__link">вул. М. Грушевського, 6; Київ, 01001</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="tel:+38 (044) 278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="fax:+38 (044) 278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="https://mail.google.com/" class="footer__link"> e-mail: info@namu.kiev.ua</a>
+                  </li>
+                </ul>
               </section>
             </section>
           </div>
