--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
 
       <div class="events__card">
         <div class="events__description-card">
-          <div class="events__exhibition-block">
+          <div class="events__exhibition-block events__exhibition-block-top">
             <span class="events__exhibition">ЛЕКЦІЯ</span>
 
             <a class="events__link" href="#">26/08/2019 - 11:00</a>
