--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НАМУ</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+      crossorigin="true"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+      crossorigin="true"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="header">
@@ -13,7 +24,7 @@
       </div>
 
       <div class="header__top">
-        <a class="header__top-logo">
+        <a href="#" class="header__top-logo">
           NA
           <br>
           MU
@@ -49,49 +60,120 @@
             </a>
           </li>
           <li class="nav__item">
-            <a href="#about-us" class="nav__link">Про нас</a>
+            <a href="#about-us" class="nav__link">Про Hас</a>
           </li>
           <li class="nav__item">
-            <a href="contacts" class="nav__link">Контакти</a>
+            <a href="#contacts" class="nav__link">Контакти</a>
           </li>
         </ul>
       </div>
 
       <div class="menu__schedule schedule">
-        <h2 class="schedule__title">Графік роботи</h2>
+        <h4 class="schedule__title">Графік роботи</h4>
 
         <div class="schedule__wrapper">
           <ul class="schedule__work-days">
             <li class="schedule__day">
               <span class="bold">12:00 - 20:00</span>
-              <span class="schedule__day--day-of-week">Середа</span>
+              <span class="schedule__day--day-of-week">cереда</span>
             </li>
             <li class="schedule__day">
               <span class="bold">12:00 - 20:00</span>
-              <span class="schedule__day--day-of-week">Четвер</span>
+              <span class="schedule__day--day-of-week">четвер</span>
             </li>
             <li class="schedule__day">
               <span class="bold">12:00 - 20:00</span>
-              <span class="schedule__day--day-of-week">П'ятниця</span>
+              <span class="schedule__day--day-of-week">п'ятниця</span>
             </li>
             <li class="schedule__day">
               <span class="bold">11:00 - 19:00</span>
-              <span class="schedule__day--day-of-week">Субота</span>
+              <span class="schedule__day--day-of-week">субота</span>
             </li>
             <li class="schedule__day">
               <span class="bold">11:00 - 19:00</span>
-              <span class="schedule__day--day-of-week">Неділя</span>
+              <span class="schedule__day--day-of-week">неділя</span>
             </li>
           </ul>
 
           <p class="schedule__weekends">
-            <span class="blod">Вихідні:</span> понеділок, вівторок
+            <span class="bold">Вихідні:</span> понеділок, вівторок
+            <br>
             Каса припиняє роботу за 1 годину
             до закриття музею
           </p>
         </div>
       </div>
     </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section class="events"  id="events">
+          <h2 class="events__title">Актуальнi події</h2>
+          <article class="article-exhibition">
+            <div class="article-exhibition__wrapper">
+
+              <img
+                src="./images/river.jpg"
+                alt="River picture.jpg"
+                class="article-exhibition__image"
+              >
+              <div class="article-exhibition event-description">
+                <div class="article-exhibition event-description--caption">
+                  <article class="article-exhibition event-description--caption-type">Виставка</article>
+                  <article class="article-exhibition event-description--caption-date">26.08-29.11.2019</article>
+                </div>
+                <h3 class="article-exhibition event-description--title events__subtitle">Йду і повертаюсь</h3>
+                <p class="article-exhibition event-description--paragraph">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку
+                  - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <article class="article-exhibition">
+            <div class="article-exhibition__wrapper">
+
+              <img
+                src="./images/woman-peacock.jpg"
+                alt="River picture.jpg"
+                class="article-exhibition__image"
+              >
+              <div class="article-exhibition event-description">
+                <div class="article-exhibition event-description--caption">
+                  <article class="article-exhibition event-description--caption-type">Виставка</article>
+                  <article class="article-exhibition event-description--caption-date">26.08-29.11.2019</article>
+                </div>
+                <h3 class="article-exhibition event-description--title events__subtitle">І спогади і мрії</h3>
+                <p class="article-exhibition event-description--paragraph">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку
+                  - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <!-- <article class="article-lecture">
+            <img
+              class="article-lecture__bg"
+              src="./images//lect-d-bg.jpg"
+              alt="d"
+            >
+            <div class="article-lecture__info float">
+              <div class="article-lecture--caption">
+                <article class="article-lecture--caption event-description--caption-type">Лекція</article>
+                <article class="article-lecture--caption event-description--caption-date">26/08/2019 - 11:00</article>
+              </div>
+              <h3 class="article-lecture__title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </article> -->
+        </section>
+      </div>
+    </main>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
