--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,112 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,regular,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,700display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/favicon.jpg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    ></script>
+
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="page__header header">
+      <nav class="header__container container">
+        <a href="#menu" class="icon icon--menu"></a>
+        <a href="#" class="header__logo">NA<br>MU</a>
+      </nav>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__container container">
+        <div class="menu__top">
+          <a href="#" class="menu__icon icon icon--close"></a>
+
+          <nav class="menu__nav nav">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#events" class="menu__link">Виставки та події</a>
+              </li>
+            </ul>
+
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#about" class="menu__link">Про Нас</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__bottom">
+          <h2 class="menu__title">Графік роботи</h2>
+
+          <div class="menu__info">
+            <ul class="menu__work-week">
+              <li class="menu__work-date">
+                <span class="menu__work-time">12:00 — 20:00</span> середа
+              </li>
+
+              <li class="menu__work-date">
+                <span class="menu__work-time">12:00 — 20:00</span> четвер
+              </li>
+
+              <li class="menu__work-date">
+                <span class="menu__work-time">12:00 — 20:00</span> п’ятниця
+              </li>
+
+              <li class="menu__work-date">
+                <span class="menu__work-time">11:00 — 19:00</span> субота
+              </li>
+
+              <li class="menu__work-date">
+                <span class="menu__work-time">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+
+            <p class="menu__second">
+              <span class="menu__weekend-day">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+
+    <main class="main">
+      <section class="main__museum museum">
+        <div class="museum__container container">
+          <div class="museum__photo">
+            <img src="./images/muzej-320px.png" alt="NAMU photo">
+          </div>
+
+          <article class="museum__content">
+            <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="museum__links">
+              <a class="museum__tickets-link" href="#events">КВИТКИ</a>
+              <a href="#events" class="museum__events-link">події
+              </a>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
