--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header class="header page__section" id="header">
       <div class="grid grid--ipad">
         <div class="header__first--section grid__item--ipad--4-6 grid__item--desktop--6-12 grid--ipad grid__header">
-          <a href="/#" class="header__logo grid__item--ipad--1-2">
+          <a href="#" class="header__logo grid__item--ipad--1-2">
             NA
             <br>
             MU
@@ -29,7 +29,7 @@
               МУЗЕЙ
             </h1>
 
-            <a href="/#" class="buy-btn">
+            <a href="#" class="buy-btn">
               <div class="buy-btn__title">
                 КВИТКИ
               </div>
@@ -241,7 +241,7 @@
       <div class="container">
         <div class="contact-us contact-us__content grid grid--footer" id="contacts">
           <div class="contact-us__logo-block grid__item--ipad--1-1 grid__item--desktop--1-1">
-            <a href="/" class="header__logo footer__logo">
+            <a href="#" class="header__logo footer__logo">
               NA
               <br>
               MU
