--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,72 @@
     >
   </head>
   <body>
-    <section class="menu"></section>
+    <section class="menu" id="menu">
+      <div class="menu__container">
+        <a href="#main" class="menu__close">
+          <img src="./images/320/menu-close.svg" alt="X">
+        </a>
+        <div class="menu__list list">
+          <a href="#gallery" class="list__item">Галерея</a>
+          <a href="#main" class="list__item">Про Нас</a>
+          <a href="#events" class="list__item">Виставки та події</a>
+          <a href="#contacts" class="list__item">Контакти</a>
+        </div>
+        <div class="menu__line"></div>
+        <div class="menu__work-schedule work-schedule">
+
+          <div>
+            <p class="work-schedule__text work-schedule__text--title">Графік роботи</p>
+            <div class="work-schedule__block work-schedule__block--menu">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                середа
+              </p>
+            </div>
+            <div class="work-schedule__block work-schedule__block--menu">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                четвер
+              </p>
+            </div>
+            <div class="work-schedule__block work-schedule__block--menu">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                п’ятниця
+              </p>
+            </div>
+            <div class="work-schedule__block work-schedule__block--menu">
+              <p class="work-schedule__time">
+                11:00 — 19:00
+              </p>
+              <p class="work-schedule__text">
+                субота
+              </p>
+            </div>
+            <div class="work-schedule__block work-schedule__block--menu">
+              <p class="work-schedule__time">
+                11:00 — 19:00
+              </p>
+              <p class="work-schedule__text">
+                неділя
+              </p>
+            </div>
+          </div>
+
+          <p class="work-schedule__text work-schedule__text--info menu__info">
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину<br>
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </section>
     <!-- main -->
     <section class="main-page" id="main">
       <div class="main-page__container">
@@ -30,6 +95,8 @@
             квитки
           </a>
         </div>
+        <a href="#events" class="main-page__arrow">ПОДІЇ
+        </a>
       </div>
 
     </section>
@@ -76,11 +143,7 @@
           </p>
         </div>
         <div class="events__advert">
-          <picture class="events__img">
-            <source media="(min-width: 1280px)" srcset="./images/1280/04.png">
-            <source media="(min-width: 768px)" srcset="./images/768/04.png">
-            <img src="./images/320/04.png" alt="picture">
-          </picture>
+          <div class="events__img"></div>
           <div class="events__box">
             <div class="events__subtitle subtitle">
               <p class="subtitle__event">лекція</p>
@@ -98,12 +161,12 @@
           Галерея
         </h3>
 
-        <div class="gallery__slider slider__container">
-        </div>
-
         <div class="gallery__box gallery__container">
           <img src="./images/1280/05.png"
           alt="picture" class="gallery__p1">
+          <img src="./images/768/05.1.png"
+            alt="p"
+            class="gallery__p">
           <img src="./images/1280/05.1.png"
           alt="picture" class="gallery__p2">
           <img src="./images/1280/05.2.png"
@@ -111,7 +174,6 @@
           <img src="./images/1280/05.3.png"
           alt="picture" class="gallery__p4">
         </div>
-
       </div>
     </section>
     <!-- subscribe -->
@@ -123,13 +185,20 @@
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <input type="email"
-          class="subscribe__input"
-          placeholder="E-mail">
-        </input>
-        <button class="subscribe__btn" type="submit">
-          <img src="./images/320/arrow.svg" alt="arrow">
-        </button>
+        <form action=" "
+          class="subscribe__form"
+          method="get"
+        >
+          <input type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+            required
+          >
+          </input>
+          <button class="subscribe__btn" type="submit">
+            <img src="./images/320/arrow.svg" alt="arrow">
+          </button>
+        </form>
       </div>
     </section>
     <!-- footer -->
@@ -150,51 +219,51 @@
             <img src="./images/320/instagram.svg" alt="In">
           </a>
         </div>
-        <div class="footer__work-schedule">
-          <p class="footer__text footer__text--title">Графік роботи</p>
-          <div class="footer__block">
-            <p class="footer__time">
+        <div class="footer__work-schedule work-schedule">
+          <p class="work-schedule__text work-schedule__text--title">Графік роботи</p>
+          <div class="work-schedule__block">
+            <p class="work-schedule__time">
               12:00 — 20:00
             </p>
-            <p class="footer__text">
+            <p class="work-schedule__text">
               середа
             </p>
           </div>
-          <div class="footer__block">
-            <p class="footer__time">
+          <div class="work-schedule__block">
+            <p class="work-schedule__time">
               12:00 — 20:00
             </p>
-            <p class="footer__text">
+            <p class="work-schedule__text">
               четвер
             </p>
           </div>
-          <div class="footer__block">
-            <p class="footer__time">
+          <div class="work-schedule__block">
+            <p class="work-schedule__time">
               12:00 — 20:00
             </p>
-            <p class="footer__text">
+            <p class="work-schedule__text">
               п’ятниця
             </p>
           </div>
-          <div class="footer__block">
-            <p class="footer__time">
+          <div class="work-schedule__block">
+            <p class="work-schedule__time">
               11:00 — 19:00
             </p>
-            <p class="footer__text">
+            <p class="work-schedule__text">
               субота
             </p>
           </div>
-          <div class="footer__block">
-            <p class="footer__time">
+          <div class="work-schedule__block">
+            <p class="work-schedule__time">
               11:00 — 19:00
             </p>
-            <p class="footer__text">
+            <p class="work-schedule__text">
               неділя
             </p>
           </div>
-          <p class="footer__text footer__text--info">
+          <p class="work-schedule__text work-schedule__text--info">
             Вихідні понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину
+            Каса припиняє роботу за 1 годину<br>
             до закриття музею
           </p>
         </div>
@@ -209,13 +278,16 @@
             e-mail: info@namu.kiev.ua
           </p>
         </div>
-        <a href="#main" class="footer__arrow"></a>
+        <a href="#main" class="footer__arrow">
+          <img src="./images/320/arrow-up.svg" alt="go up"
+            class="footer__arrow-img">
+        </a>
         <div class="footer__line"></div>
-        <div class="footer__menu">
-          <a href="#gallery" class="footer__menu-item">Галерея</a>
-          <a href="#main" class="footer__menu-item">Про Нас</a>
-          <a href="#events" class="footer__menu-item">Виставки та події</a>
-          <a href="#contacts" class="footer__menu-item">Контакти</a>
+        <div class="footer__list list">
+          <a href="#gallery" class="list__item">Галерея</a>
+          <a href="#main" class="list__item">Про Нас</a>
+          <a href="#events" class="list__item">Виставки та події</a>
+          <a href="#contacts" class="list__item">Контакти</a>
         </div>
 
         <div class="footer__copyright">
@@ -225,6 +297,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
