--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,78 @@
         </div>
       </section>
 
-      
+      <section class="main__current-events current-events" id="events">
+        <div class="current-events__container container">
+          <h2 class="current-events__title">Актуальні
+            події
+          </h2>
+          <div class="current-events__list">
+
+            <div class="current-events__item events-item">
+              <div class="events-item__img">
+                <img src="./images/events-1.png" alt="Йду і повертаюсь
+                ">
+              </div>
+
+              <div class="events-item__info">
+                <div class="events-item__info-first">
+                  <h4 class="events-item__text">ВИСТАВКА</h4>
+                  <h4 class="events-item__date">26.08-29.11.2019</h4>
+                </div>
+
+                <div class="events-item__info-second">
+                  <h3 class="events-item__subtitle">Йду і повертаюсь
+                  </h3>
+                  <h4 class="events-item__description">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="current-events__item events-item">
+              <div class="events-item__img">
+                <img src="./images/events-2.png" alt="І спогади і мрії
+                ">
+              </div>
+
+              <div class="events-item__info">
+                <div class="events-item__info-first">
+                  <h4 class="events-item__text">ВИСТАВКА</h4>
+                  <h4 class="events-item__date">26.08-29.11.2019</h4>
+                </div>
+
+                <div class="events-item__info-second">
+                  <h3 class="events-item__subtitle">І спогади і мрії
+                  </h3>
+                  <h4 class="events-item__description">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__romantic romantic">
+        <div class="romantic__container">
+          <div class="romantic__img">
+            <img src="./images/events-3.png" alt="Від класицизму до романтизму
+            ">
+          </div>
+
+          <div class="romantic__info container">
+            <div class="romantic__info-first">
+              <h4 class="romantic__text">ЛЕКЦІЯ</h4>
+              <h4 class="romantic__date">26/08/2019 - 11:00</h4>
+            </div>
+            <h3 class="romantic__subtitle">Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
