--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="stylesheet" type="text/css"
+    href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="shortcut icon"
       type="image/png"
@@ -160,21 +162,22 @@
         <h3 class="gallery__title title">
           Галерея
         </h3>
-
-        <div class="gallery__box gallery__container">
-          <img src="./images/1280/05.png"
-          alt="picture" class="gallery__p1">
-          <img src="./images/768/05.1.png"
-            alt="p"
-            class="gallery__p">
-          <img src="./images/1280/05.1.png"
-          alt="picture" class="gallery__p2">
-          <img src="./images/1280/05.2.png"
-          alt="picture" class="gallery__p3">
-          <img src="./images/1280/05.3.png"
-          alt="picture" class="gallery__p4">
-        </div>
+        <picture class="gallery__p1">
+          <source media="(min-width: 1280px)" srcset="./images/1280/05.png">
+          <source media="(min-width: 768px)" srcset="./images/768/05.png">
+          <img src="./images/320/05.png" alt="Museum">
+        </picture>
+        <img src="./images/768/05.1.png"
+          alt="p"
+          class="gallery__p">
+        <img src="./images/1280/05.1.png"
+        alt="picture" class="gallery__p2">
+        <img src="./images/1280/05.2.png"
+        alt="picture" class="gallery__p3">
+        <img src="./images/1280/05.3.png"
+        alt="picture" class="gallery__p4">
       </div>
+
     </section>
     <!-- subscribe -->
     <section class="subscribe">
@@ -185,15 +188,13 @@
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <form action=" "
+        <form action="#"
           class="subscribe__form"
-          method="get"
-        >
+          method="get">
           <input type="email"
             class="subscribe__input"
             placeholder="E-mail"
-            required
-          >
+            required>
           </input>
           <button class="subscribe__btn" type="submit">
             <img src="./images/320/arrow.svg" alt="arrow">
@@ -291,13 +292,16 @@
         </div>
 
         <div class="footer__copyright">
-          <p class="footer__copyright-element">Designed by Zhyriada Marina</p>
-          <p class="footer__copyright-element">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__copyright-element">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__copyright-element">
+            Copyright © 2019. All Rights Reserved.
+          </p>
         </div>
       </div>
     </footer>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
