add decorative element in header

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       type="image/ico"
       href="./images/logos/favicon.ico"
     >
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -50,7 +51,12 @@
         <div class="top-actions">
           <a href="#menu" class="header__menu-opener icon"></a>
         </div>
+
+        <div class="header__decorative decorative">
+          <p class="decorative__item">події</p>
+        </div>
       </div>
+
     </header>
 
     <nav class="page__menu menu" id="menu">
