add button link backgraund  style

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./images/logo.svg"
+      >
+    <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin="anonymous"
@@ -23,6 +28,7 @@
     <header id="home" class="header">
       <div class="container">
         <div class="header__content">
+          <div class="header__bg"></div>
           <div class="header__top">
             <a href="#menu" class="icon icon--menu header__icon"></a>
 
@@ -41,7 +47,11 @@
                 <div class="button__arrow"></div>
               </a>
 
-              <div class="button__events">ПОДІЇ</div>
+              <a href="#actual-events"
+                class="button__events"
+              >
+                ПОДІЇ
+              </a>
             </div>
           </div>
         </div>
@@ -63,16 +73,19 @@
                     Галерея
                   </a>
                 </li>
+
                 <li class="nav__item">
                   <a class="nav__link" href="#subscription">
                     Про Нас
                   </a>
                 </li>
+
                 <li class="nav__item">
                   <a class="nav__link" href="#actual-events">
                     Виставки та <br> події
                   </a>
                 </li>
+
                 <li class="nav__item">
                   <a class="nav__link" href="#contacts">
                     Контакти
@@ -110,7 +123,7 @@
             <article class="exhibition actual-events__exhibition">
               <div class="exhibition__photocards">
                 <img
-                  src="./images/exb/exb-1.webp"
+                  src="./images/exb/exb-1-1.png"
                   alt="Go and come back"
                   class="exhibition__photo"
                 >
@@ -119,6 +132,7 @@
               <div class="exhibition__description">
                 <div class="exhibition__info">
                   <p class="exhibition__subtitle">ВИСТАВКА</p>
+
                   <p class="exhibition__date">26.08-29.11.2019</p>
                 </div>
 
@@ -136,7 +150,7 @@
             <article class="exhibition actual-events__exhibition">
               <div class="exhibition__photocards">
                 <img
-                  src="./images/exb/exb-2.webp"
+                  src="./images/exb/exb-2-2.png"
                   alt="Memories and dreams"
                   class="exhibition__photo"
                 >
@@ -145,12 +159,16 @@
               <div class="exhibition__description">
                 <div class="exhibition__info">
                   <p class="exhibition__subtitle">ВИСТАВКА</p>
+
                   <p class="exhibition__date">26.08-29.11.2019</p>
                 </div>
+
                 <div class="exhibition__title-block">
                   <h1 class="exhibition__title">І спогади і мрії</h1>
+
                   <div class="exhibition__square"></div>
                 </div>
+
                 <p class="exhibition__text">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
                 відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </p>
@@ -239,10 +257,19 @@
             </a>
 
             <div class="footer__icon-block">
-              <a href="https://www.facebook.com/namu.museum/" class="footer__icon footer__icon--facebook">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__icon footer__icon--facebook"
+                target="_blank"
+              >
                 <img src="./images/icon/facebook-letter-logo.svg" alt="Facebook">
               </a>
-              <a href="https://www.instagram.com/namu.museum/" class="footer__icon">
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__icon"
+                target="_blank"
+              >
                 <img src="./images/icon/instagram-logo.svg" alt="Instagram">
               </a>
             </div>
@@ -270,6 +297,7 @@
             <a
               href="https://goo.gl/maps/721hE1Tv1awmT8xdA"
               class="adress__link"
+              target="_blank"
             >
             вул. М. Грушевського, 6; Київ, 01001
             </a>
@@ -297,16 +325,19 @@
                   Галерея
                 </a>
               </li>
+
               <li class="nav__item">
                 <a class="nav__link nav__link--footer" href="#subscription">
                   Про Нас
                 </a>
               </li>
+
               <li class="nav__item">
                 <a class="nav__link nav__link--footer" href="#actual-events">
                   Виставки та події
                 </a>
               </li>
+
               <li class="nav__item">
                 <a class="nav__link nav__link--footer" href="#contacts">
                   Контакти
