--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="shortcut icon"
       type="image/png"
-      href="./images/320/icon.ico"
-    >
+      href="./images/320/icon.ico">
   </head>
-  <body>
+  <body >
     <section class="menu" id="menu">
       <div class="menu__container">
         <a href="#main" class="menu__close">
@@ -80,227 +79,225 @@
       </div>
     </section>
     <!-- main -->
-    <section class="main-page" id="main">
-      <div class="main-page__container">
-        <div class="main-page__header">
-          <a href="#menu" class="main-page__menu"></a>
-          <a class="main-page__logo" href="#">NA<br>MU</a>
-        </div>
-        <picture class="main-page__img">
-          <source media="(min-width: 1280px)" srcset="./images/1280/01.png">
-          <source media="(min-width: 768px)" srcset="./images/768/01.png">
-          <img src="./images/320/01.png" alt="Museum">
-        </picture>
-        <div class="main-page__info">
-          <h1 class="main-page__title title">художній музей</h1>
-          <a href="#" class="main-page__btn">
-            квитки
+    <main class="body">
+      <section class="main-page" id="main">
+        <div class="main-page__container">
+          <div class="main-page__header">
+            <a href="#menu" class="main-page__menu"></a>
+            <a class="main-page__logo" href="#">NA<br>MU</a>
+          </div>
+          <picture class="main-page__img">
+            <source media="(min-width: 1280px)" srcset="./images/1280/01.png">
+            <source media="(min-width: 768px)" srcset="./images/768/01.png">
+            <img src="./images/320/01.png" alt="Museum">
+          </picture>
+          <div class="main-page__info">
+            <h1 class="main-page__title title">художній музей</h1>
+            <a href="#" class="main-page__btn">
+              квитки
+            </a>
+          </div>
+          <a href="#events" class="main-page__arrow">ПОДІЇ
           </a>
         </div>
-        <a href="#events" class="main-page__arrow">ПОДІЇ
-        </a>
-      </div>
 
-    </section>
-    <!-- events -->
-    <section class="events" id="events">
-      <div class="events__container">
-        <h2 class="events__title title">
-          Aктуальні події
-        </h2>
-        <div class="events__card card">
-          <picture class="card__img">
-            <source media="(min-width: 1280px)" srcset="./images/1280/02.png">
-            <source media="(min-width: 768px)" srcset="./images/768/02.png">
-            <img src="./images/320/02.png" alt="picture">
-          </picture>
-          <div class="card__subtitle subtitle">
-            <p class="subtitle__event">ВИСТАВКА</p>
-            <p class="subtitle__date">26.08-29.11.2019</p>
-          </div>
-          <h3 class="card__title">
-            Йду i повертаюсь
-          </h3>
-          <p class="card__text">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
-            половини 1980-1995 років.
-          </p>
-        </div>
-        <div class="events__card card">
-          <picture class="card__img">
-            <source media="(min-width: 1280px)" srcset="./images/1280/03.png">
-            <source media="(min-width: 768px)" srcset="./images/768/03.png">
-            <img src="./images/320/03.png" alt="picture">
-          </picture>
-          <div class="card__subtitle subtitle">
-            <p class="subtitle__event">ВИСТАВКА</p>
-            <p class="subtitle__date">26.08-29.11.2019</p>
-          </div>
-          <h3 class="card__title title">
-            I спогади i мрії
-          </h3>
-          <p class="card__text">
-            Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
-            відкриває ретроспективну ювілейну виставку «І спогади i мрії».
-          </p>
-        </div>
-        <div class="events__advert">
-          <div class="events__img"></div>
-          <div class="events__box">
-            <div class="events__subtitle subtitle">
-              <p class="subtitle__event">лекція</p>
-              <p class="subtitle__date">26/08/2019 - 11:00</p>
+      </section>
+      <!-- events -->
+      <section class="events" id="events">
+        <div class="events__container">
+          <h2 class="events__title title">
+            Aктуальні події
+          </h2>
+          <div class="events__card card">
+            <picture class="card__img">
+              <source media="(min-width: 1280px)" srcset="./images/1280/02.png">
+              <source media="(min-width: 768px)" srcset="./images/768/02.png">
+              <img src="./images/320/02.png" alt="picture">
+            </picture>
+            <div class="card__subtitle subtitle">
+              <p class="subtitle__event">ВИСТАВКА</p>
+              <p class="subtitle__date">26.08-29.11.2019</p>
             </div>
-            <h3 class="events__name ">Від класицизму до романтизму</h3>
+            <h3 class="card__title">
+              Йду i повертаюсь
+            </h3>
+            <p class="card__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+              другої
+              половини 1980-1995 років.
+            </p>
+          </div>
+          <div class="events__card card">
+            <picture class="card__img">
+              <source media="(min-width: 1280px)" srcset="./images/1280/03.png">
+              <source media="(min-width: 768px)" srcset="./images/768/03.png">
+              <img src="./images/320/03.png" alt="picture">
+            </picture>
+            <div class="card__subtitle subtitle">
+              <p class="subtitle__event">ВИСТАВКА</p>
+              <p class="subtitle__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="card__title title">
+              I спогади i мрії
+            </h3>
+            <p class="card__text">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+              Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+            </p>
+          </div>
+          <div class="events__advert">
+            <div class="events__img"></div>
+            <div class="events__box">
+              <div class="events__subtitle subtitle">
+                <p class="subtitle__event">лекція</p>
+                <p class="subtitle__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="events__name ">Від класицизму до романтизму</h3>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- gallery -->
-    <section class="gallery" id="gallery">
-      <div class="gallery__container">
-        <h3 class="gallery__title title">
-          Галерея
-        </h3>
-        <picture class="gallery__p1">
-          <source media="(min-width: 1280px)" srcset="./images/1280/05.png">
-          <source media="(min-width: 768px)" srcset="./images/768/05.png">
-          <img src="./images/320/05.png" alt="Museum">
-        </picture>
-        <img src="./images/768/05.1.png"
-          alt="p"
-          class="gallery__p">
-        <img src="./images/1280/05.1.png"
-        alt="picture" class="gallery__p2">
-        <img src="./images/1280/05.2.png"
-        alt="picture" class="gallery__p3">
-        <img src="./images/1280/05.3.png"
-        alt="picture" class="gallery__p4">
-      </div>
-
-    </section>
-    <!-- subscribe -->
-    <section class="subscribe">
-      <div class="subscribe__container">
-        <h3 class="subscribe__title title">
-          Підписка
-        </h3>
-        <p class="subscribe__text">
-          Бути в курсі всіх актуальних подій та останніх новин.
-        </p>
-        <form action="#"
-          class="subscribe__form"
-          method="get">
-          <input type="email"
-            class="subscribe__input"
-            placeholder="E-mail"
-            required>
-          </input>
-          <button class="subscribe__btn" type="submit">
-            <img src="./images/320/arrow.svg" alt="arrow">
-          </button>
-        </form>
-      </div>
-    </section>
-    <!-- footer -->
-    <footer class="footer" id="contacts">
-      <div class="footer__container">
-        <a href="#main" class="footer__logo title">
-          NA<br>MU
-        </a>
-        <div class="footer__icons">
-          <a href="#facebook.com"
-            class="footer__fb"
-            target="_blank">
-            <img src="./images/320/Facebook.svg" alt="F">
-          </a>
-          <a href="#facebook.com"
-            class="footer__fb"
-            target="_blank">
-            <img src="./images/320/instagram.svg" alt="In">
-          </a>
-        </div>
-        <div class="footer__work-schedule work-schedule">
-          <p class="work-schedule__text work-schedule__text--title">Графік роботи</p>
-          <div class="work-schedule__block">
-            <p class="work-schedule__time">
-              12:00 — 20:00
-            </p>
-            <p class="work-schedule__text">
-              середа
-            </p>
-          </div>
-          <div class="work-schedule__block">
-            <p class="work-schedule__time">
-              12:00 — 20:00
-            </p>
-            <p class="work-schedule__text">
-              четвер
-            </p>
-          </div>
-          <div class="work-schedule__block">
-            <p class="work-schedule__time">
-              12:00 — 20:00
-            </p>
-            <p class="work-schedule__text">
-              п’ятниця
-            </p>
-          </div>
-          <div class="work-schedule__block">
-            <p class="work-schedule__time">
-              11:00 — 19:00
-            </p>
-            <p class="work-schedule__text">
-              субота
-            </p>
-          </div>
-          <div class="work-schedule__block">
-            <p class="work-schedule__time">
-              11:00 — 19:00
-            </p>
-            <p class="work-schedule__text">
-              неділя
-            </p>
-          </div>
-          <p class="work-schedule__text work-schedule__text--info">
-            Вихідні понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину<br>
-            до закриття музею
-          </p>
-        </div>
-        <div class="footer__contacts">
-          <p class="footer__text footer__text--title">
-            Контакти:
-          </p>
-          <p class="footer__text">
-            вул. М. Грушевського, 6; Київ, 01001 <br>
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54 <br>
-            e-mail: info@namu.kiev.ua
-          </p>
-        </div>
-        <a href="#main" class="footer__arrow">
-          <img src="./images/320/arrow-up.svg" alt="go up"
-            class="footer__arrow-img">
-        </a>
-        <div class="footer__line"></div>
-        <div class="footer__list list">
-          <a href="#gallery" class="list__item">Галерея</a>
-          <a href="#main" class="list__item">Про Нас</a>
-          <a href="#events" class="list__item">Виставки та події</a>
-          <a href="#contacts" class="list__item">Контакти</a>
+      </section>
+      <!-- gallery -->
+      <section class="gallery" id="gallery">
+        <div class="gallery__container">
+          <h3 class="gallery__title title">
+            Галерея
+          </h3>
+          <picture class="gallery__p1">
+            <source media="(min-width: 1280px)" srcset="./images/1280/05.png">
+            <source media="(min-width: 768px)" srcset="./images/768/05.png">
+            <img src="./images/320/05.png" alt="Museum">
+          </picture>
+          <img src="./images/768/05.1.png" alt="p"
+            class="gallery__p">
+          <img src="./images/1280/05.1.png"
+            alt="picture" class="gallery__p2">
+          <img src="./images/1280/05.2.png"
+            alt="picture" class="gallery__p3">
+          <img src="./images/1280/05.3.png"
+          alt="picture" class="gallery__p4">
         </div>
 
-        <div class="footer__copyright">
-          <p class="footer__copyright-element">
-            Designed by Zhyriada Marina
+      </section>
+      <!-- subscribe -->
+      <section class="subscribe">
+        <div class="subscribe__container">
+          <h3 class="subscribe__title title">
+            Підписка
+          </h3>
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
           </p>
-          <p class="footer__copyright-element">
-            Copyright © 2019. All Rights Reserved.
-          </p>
+          <form action="#" class="subscribe__form"
+            method="get">
+            <input type="email" class="subscribe__input"
+              placeholder="E-mail" required>
+            </input>
+            <button class="subscribe__btn" type="submit">
+              <img src="./images/320/arrow.svg" alt="arrow">
+            </button>
+          </form>
         </div>
-      </div>
-    </footer>
+      </section>
+      <!-- footer -->
+      <footer class="footer" id="contacts">
+        <div class="footer__container">
+          <a href="#main" class="footer__logo title">
+            NA<br>MU
+          </a>
+          <div class="footer__icons">
+            <a href="#facebook.com"
+            class="footer__fb" target="_blank">
+              <img src="./images/320/Facebook.svg" alt="F">
+            </a>
+            <a href="#facebook.com"
+            class="footer__fb" target="_blank">
+              <img src="./images/320/instagram.svg" alt="In">
+            </a>
+          </div>
+          <div class="footer__work-schedule work-schedule">
+            <p class="work-schedule__text work-schedule__text--title">Графік роботи</p>
+            <div class="work-schedule__block">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                середа
+              </p>
+            </div>
+            <div class="work-schedule__block">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                четвер
+              </p>
+            </div>
+            <div class="work-schedule__block">
+              <p class="work-schedule__time">
+                12:00 — 20:00
+              </p>
+              <p class="work-schedule__text">
+                п’ятниця
+              </p>
+            </div>
+            <div class="work-schedule__block">
+              <p class="work-schedule__time">
+                11:00 — 19:00
+              </p>
+              <p class="work-schedule__text">
+                субота
+              </p>
+            </div>
+            <div class="work-schedule__block">
+              <p class="work-schedule__time">
+                11:00 — 19:00
+              </p>
+              <p class="work-schedule__text">
+                неділя
+              </p>
+            </div>
+            <p class="work-schedule__text work-schedule__text--info">
+              Вихідні понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <p class="footer__text footer__text--title">
+              Контакти:
+            </p>
+            <p class="footer__text">
+              вул. М. Грушевського, 6; Київ, 01001 <br>
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54 <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+          <a href="#main" class="footer__arrow">
+            <img src="./images/320/arrow-up.svg"
+            alt="go up"  class="footer__arrow-img">
+          </a>
+          <div class="footer__line"></div>
+          <div class="footer__list list">
+            <a href="#gallery" class="list__item">Галерея</a>
+            <a href="#main" class="list__item">Про Нас</a>
+            <a href="#events" class="list__item">Виставки та події</a>
+            <a href="#contacts" class="list__item">Контакти</a>
+          </div>
+
+          <div class="footer__copyright">
+            <p class="footer__copyright-element">
+              Designed by Zhyriada Marina
+            </p>
+            <p class="footer__copyright-element">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </footer>
+    </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
