--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,79 @@
 
     <main class="page__content">
       <section class="page__section events" id="events">
+        <div class="events__exhibition exhibition">
+          <img
+            src="./images/events_foto/event_1.jpg"
+            alt="Йду і повертаюсь"
+            class="exhibition__img"
+          >
 
+          <div class="exhibition__content">
+            <div class="exhibition__caption">
+              <div class="exhibition__caption-tittle">
+                виставка
+              </div>
+
+              <div class="exhibition__date">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <h2 class="exhibition__tittle">
+              Йду і повертаюсь
+            </h2>
+
+            <div class="exhibition__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>
+        </div>
+
+        <div class="events__exhibition exhibition">
+          <img
+            src="./images/events_foto/event_2.jpg"
+            alt="І спогади і мрії"
+            class="exhibition__img"
+          >
+
+          <div class="exhibition__content">
+            <div class="exhibition__caption">
+              <div class="exhibition__caption-tittle">
+                виставка
+              </div>
+
+              <div class="exhibition__date">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <h2 class="exhibition__tittle">
+              І спогади і мрії
+            </h2>
+
+            <div class="exhibition__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+
+        <div class="events__lecture lecture">
+          <div class="lecture__content">
+            <div class="lecture__caption">
+              <div class="lecture__caption-tittle">
+                лекція
+              </div>
+
+              <div class="lecture__date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+
+            <h2 class="lecture__tittle">
+              Від класицизму до романтизму
+            </h2>
+          </div>
+        </div>
       </section>
 
       <section class="page__section gallery" id="gallery">
