--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НАМУ</title>
+    <link
+      rel="icon"
+      href="./images/icons/museumi-ico.svg"
+      type="image/x-icon"/
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -182,10 +187,10 @@
           </article>
         </section>
 
-        <section class="subscribe">
+        <section class="subscribe" id="about-us">
           <form
-            name="email"
-            method="get"
+            id="email"
+            action="post"
             class="purchase"
           >
             <h2 class="purchase__title">Підписка</h2>
@@ -200,7 +205,7 @@
                 placeholder="E-mail"
               >
               <button type="submit" class="purchase__button">
-                <img src="./images/icons/go-black.svg" alt="go">
+                <img src="./images/icons/go-black.svg" alt="submit">
               </button>
             </div>
           </form>
@@ -261,7 +266,7 @@
               </p>
             </div>
           </div>
-          <div class="footer__contacts">
+          <div class="footer__contacts" id="contacts">
             <h4 class="footer__contacts--title">Контакти</h4>
             <a
               href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
