--- a/src/index.html
+++ b/src/index.html
@@ -201,8 +201,11 @@
             <div class="purchase__wrapper">
               <input
                 type="email"
+                id="usremail"
                 class="purchase__email"
                 placeholder="E-mail"
+                autocomplete="email"
+                required
               >
               <button type="submit" class="purchase__button">
                 <img src="./images/icons/go-black.svg" alt="submit">
@@ -212,8 +215,6 @@
         </section>
       </div>
     </main>
-
-
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__top">
@@ -226,9 +227,13 @@
           </div>
 
           <div class="footer__top--socials">
-            <img src="./images/icons/facebook.svg" alt="facebook logo.jpg">
+            <a href="https://www.facebook.com/namu.museum" target="_blank">
+              <img src="./images/icons/facebook.svg" alt="facebook logo.jpg">
+            </a>
 
-            <img src="./images/icons/insta.svg" alt="instagram logo.jpg">
+            <a href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D" target="_blank">
+              <img src="./images/icons/insta.svg" alt="instagram logo.jpg">
+            </a>
           </div>
         </div>
 
@@ -271,12 +276,19 @@
             <a
               href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
               class="footer__link"
+              target="blank"
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
             <a href="tel:+38 (044) 278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
-            <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
-            <a href="#" class="footer__link">e-mail: info@namu.kiev.ua</a>
+            <a href="fax-global-phone:+38 (044) 278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
+              class="footer__link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
           </div>
 
           <a href="#" class="footer__info--go-top">
