--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
             <article class="exhibition actual-events__exhibition">
               <div class="exhibition__photocards">
                 <img
-                  src="./images/exb/exb-1-1.png"
+                  src="./images/actual-events/exb-1.png"
                   alt="Go and come back"
                   class="exhibition__photo"
                 >
@@ -150,7 +150,7 @@
             <article class="exhibition actual-events__exhibition">
               <div class="exhibition__photocards">
                 <img
-                  src="./images/exb/exb-2-2.png"
+                  src="./images/actual-events/exb-2.png"
                   alt="Memories and dreams"
                   class="exhibition__photo"
                 >
