add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -55,53 +55,55 @@
           </div>
         </div>
 
-        <div class="header__menu">
-          <div class="header__menu-left">
-            <a href="#" class="header__hamburger header__hamburger--close"></a>
-            <div class="header__lists">
-              <ul class="header__list-first">
-                <li class="header__list-item">
-                  <a href="#galery">Галерея</a>
-                </li>
-                <li class="header__list-item">
-                  <a href="#relevan">Виставки та події</a>
-                </li>
-              </ul>
-              <ul class="header__list-second">
-                <li class="header__list-item">
-                  <a href="#about">Про Нас</a>
-                </li>
-                <li class="header__list-item">
-                  <a href="#contacts">Контакти</a>
-                </li>
-              </ul>
+        <div class="header__menu-content">
+          <div class="header__menu">
+            <div class="header__menu-left">
+              <a href="#" class="header__hamburger header__hamburger--close"></a>
+              <div class="header__lists">
+                <ul class="header__list-first">
+                  <li class="header__list-item">
+                    <a href="#galery">Галерея</a>
+                  </li>
+                  <li class="header__list-item">
+                    <a href="#relevan">Виставки та події</a>
+                  </li>
+                </ul>
+                <ul class="header__list-second">
+                  <li class="header__list-item">
+                    <a href="#about">Про Нас</a>
+                  </li>
+                  <li class="header__list-item">
+                    <a href="#contacts">Контакти</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="header__menu-right">
-            <h4 class="header__menu-title">Графік роботи</h4>
-            <div class="header__inform">
-              <ul class="header__list-schedule">
-                <li class="header__item-schedule">
-                  <strong class="header__time--strong">12:00 — 20:00</strong> середа
-                </li>
-                <li class="header__item-schedule">
-                  <strong class="header__time--strong">12:00 — 20:00</strong> четвер
-                </li>
-                <li class="header__item-schedule">
-                  <strong class="header__time--strong">12:00 — 20:00</strong> п’ятниця
-                </li>
-                <li class="header__item-schedule">
-                  <strong class="header__time--strong">11:00 — 19:00</strong> субота
-                </li>
-                <li class="header__item-schedule">
-                  <strong class="header__time--strong">11:00 — 19:00</strong> неділя
-                </li>
-              </ul>
-              <p class="header__menu-info">
-                <strong>Вихідні:</strong> понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
+            <div class="header__menu-right">
+              <h4 class="header__menu-title">Графік роботи</h4>
+              <div class="header__inform">
+                <ul class="header__list-schedule">
+                  <li class="header__item-schedule">
+                    <strong class="header__time--strong">12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="header__item-schedule">
+                    <strong class="header__time--strong">12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="header__item-schedule">
+                    <strong class="header__time--strong">12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="header__item-schedule">
+                    <strong class="header__time--strong">11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="header__item-schedule">
+                    <strong class="header__time--strong">11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+                <p class="header__menu-info">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
             </div>
           </div>
         </div>
