--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"
-      crossorigin="true"
+      crossorigin="annonymous"
     >
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"
-      crossorigin="true"
+      crossorigin="annonymous"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
       rel="stylesheet">
@@ -215,6 +215,7 @@
         </section>
       </div>
     </main>
+
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__top">
@@ -280,8 +281,8 @@
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
-            <a href="tel:+38 (044) 278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
-            <a href="fax-global-phone:+38 (044) 278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
+            <a href="tel:+38-(044)-278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
+            <a href="fax-global-phone:+38-(044)-278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
             <a
               href="mailto:info@namu.kiev.ua"
               target="_blank"
@@ -329,5 +330,4 @@
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
-
 </html>
